<resources>
    <string name="app_name">Marketing-Demo</string>
    <string name="reset">Reset</string>
    <string name="next">Next</string>
    <string name="back">Return</string>
    <string name="please_select_targeting">Please select the target</string>
    <string name="select_channels">Please select the channels</string>
    <string name="select_the_offerings">Please select the offerings</string>
    <string name="select_all_plans">Please select on all the plans</string>
    <string name="select_all_channels">Please select on all the channels</string>
    <string name="order_details">Order Summary </string>
    <string name="new_order">New order</string>
    <string name="send_email">Send Email</string>
    <string name="dialog_title_close">Closing App</string>
    <string name="dialog_message_close">Are you sure you want to close the app?</string>
    <string name="no_app">No app found to handle this action</string>
    <string name="mail_subject">Marketing campaign fees</string>
</resources>