<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/actions_linear_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:visibility="gone">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/header_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingHorizontal="@dimen/default_margin_padding"
                android:paddingVertical="@dimen/double_margin_padding"
                android:text="@string/select_the_offerings"
                android:textColor="@color/black"
                android:textSize="@dimen/default_text_size"
                android:visibility="visible" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/clear_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingHorizontal="@dimen/default_margin_padding"
                android:src="@drawable/ic_baseline_clear_24"
                android:text="@string/back" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:enabled="false"
                android:paddingHorizontal="@dimen/default_margin_padding"
                android:src="@drawable/ic_baseline_navigate_next_24"
                android:text="@string/next"
                android:tint="@drawable/next_button_color" />


        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/campaigns_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/actions_linear_card_view" />

    <ProgressBar
        android:id="@+id/campaigns_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/message_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="@color/black" />


</com.google.android.material.circularreveal.CircularRevealRelativeLayout>