<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/actions_linear_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.circularreveal.CircularRevealRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/header_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/default_margin_padding"
                android:paddingVertical="@dimen/double_margin_padding"
                android:layout_centerVertical="true"
                android:text="@string/order_details"
                android:textColor="@color/black"
                android:textSize="@dimen/default_text_size"
                android:visibility="visible" />

        </com.google.android.material.circularreveal.CircularRevealRelativeLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/summary_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/default_margin_padding"
        app:layout_constraintBottom_toTopOf="@id/orders_details_card_view"
        app:layout_constraintTop_toBottomOf="@id/actions_linear_card_view" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/orders_details_card_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="5dp"
        app:strokeColor="@color/silver"
        app:strokeWidth="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/total_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingHorizontal="@dimen/default_margin_padding"
                android:paddingVertical="@dimen/double_margin_padding"
                android:textColor="@color/black"
                android:visibility="visible" />


            <TextView
                android:id="@+id/new_order_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:paddingHorizontal="@dimen/default_margin_padding"
                android:text="@string/new_order"
                android:textColor="@color/bright_blue" />

            <TextView
                android:id="@+id/send_mail_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toStartOf="@id/new_order_button"
                android:gravity="center"
                android:paddingHorizontal="@dimen/default_margin_padding"
                android:text="@string/send_email"
                android:textColor="@color/teal_200"
                tools:ignore="RelativeOverlap" />


        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>